--- a/app/Resources/views/teacher/details.html.twig
+++ b/app/Resources/views/teacher/details.html.twig
@@ -20,7 +20,7 @@
                         <td>{{ student.lastName }}</td>
                         <td>{{ student.email }}</td>
                         <td>{{ student.personalId }}</td>
-                        <td>{{ student.grade }}</td>
+                        <td>{{ student.studentClass.gradeForSelect }}</td>
                         <td class="text-center">
                             <button class="btn-block btn-primary btn" id="btn-show-grades">Show Grades <span
                                         class="ml-2"> <i
