--- a/assets/css/_teacher-index.scss
+++ b/assets/css/_teacher-index.scss
@@ -15,5 +15,8 @@
     box-shadow: unset;
     opacity: 1;
     border: 1px solid $baseColor;
+    background: #fff;
+    color: $baseColor;
+    transform: scale(0.95);
   }
 }
