--- a/app/Resources/views/common/navbar.html.twig
+++ b/app/Resources/views/common/navbar.html.twig
@@ -1,5 +1,5 @@
 {% block navbar %}
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="header">
         <a class="navbar-brand" href="/"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03"
                 aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
