--- a/assets/css/_custom-tables.scss
+++ b/assets/css/_custom-tables.scss
@@ -1,5 +1,5 @@
 .custom-table-temlate {
-  border: 1px solid darken($baseColor, 5%);
+  //border: 1px solid darken($baseColor, 5%);
   border-radius: $borderRadius;
   box-shadow: 3px 3px 0 rgba(0,0,0,0.1);
   max-width: calc(100% - 2em);
