--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,7 +32,7 @@ body {
 }
 
 #main-wrapper {
-  min-height: 100%;
+  min-height: 100vh;
   position: relative;
   background: rgba(0, 0, 0, 0.2);
 }
