empty classes fix

--- a/app/Resources/views/teacher/index.html.twig
+++ b/app/Resources/views/teacher/index.html.twig
@@ -1,4 +1,4 @@
-{% if emptyClasses is defined and emptyClasses|length > 0 %}
+{% if emptyClasses is defined %}
     {% if emptyClasses|length > 0 %}
         {% include 'teacher/partials/empty-classes.html.twig' %}
     {% else %}
