--- a/app/Resources/views/common/navbar.html.twig
+++ b/app/Resources/views/common/navbar.html.twig
@@ -31,57 +31,15 @@
             <ul class="navbar-nav ml-auto">
                 {% if app.user %}
                     {% if is_granted('ROLE_ADMIN') %}
-                        {# TODO #}
+
+                    {% elseif is_granted('ROLE_TEACHER') and not is_granted('ROLE_ADMIN') %}
+                        {% include 'teacher/partials/navigation.html.twig' %}
+                    {% else %}
+                        {% include 'student/partials/navigation.html.twig' %}
                     {% endif %}
-                    {% if app.user and is_granted('ROLE_USER') and not is_granted('ROLE_TEACHER') and not is_granted('ROLE_ADMIN') %}
-                        <li class="nav-item {% if app.request.attributes.get('_route') == 'student_grades' %}active{% endif %}">
-                            <a class="nav-link"
-                               href="{{ path('student_grades') }}"
-                            >Grades Book</a>
-                        </li>
-                    {% endif %}
-                    {% if app.user and is_granted('ROLE_USER') and not is_granted('ROLE_TEACHER') and not is_granted('ROLE_ADMIN') %}
-                        <li class="nav-item {% if app.request.attributes.get('_route') == 'student_absences' %}active{% endif %}">
-                            <a class="nav-link"
-                               href="{{ path('student_absences') }}"
-                            >Absences</a>
-                        </li>
-                    {% endif %}
-                    {% if is_granted('ROLE_TEACHER') %}
-                        <li class="nav-item {% if app.request.attributes.get('_route') == 'teacher_students_list' %}active{% endif %}">
-                            <a class="nav-link"
-                               href="{{ path('teacher_students_list') }}"
-                            >My Class</a>
-                        </li>
-                    {% endif %}
-                    <li class="nav-item {% if app.request.attributes.get('_route') == 'student_schedule' or app.request.attributes.get('_route') == 'teacher_schedule' %}active{% endif %}">
-                        <a class="nav-link"
-                           href="
-                            {% if is_granted('ROLE_TEACHER') %}
-                                {{ path('teacher_schedule') }}
-                            {% else %}
-                                {{ path('student_schedule') }}
-                            {% endif %}"
-                        >Weekly Schedule</a>
-                    </li>
-                    <li class="mr-5 nav-item {% if app.request.attributes.get('_route') == 'user_profile' %}active{% endif %}">
-                        <a class="nav-link" href="{{ path('user_profile') }}">My Profile</a>
-                    </li>
-                    <li class="nav-item ml-md-5">
-                    <span class="nav-link active cursor-d font-italic">
-                        Welcome {{ app.user.firstName }} {{ app.user.lastName }} !
-                    </span>
-                    </li>
-                    <li class="nav-item {% if app.request.attributes.get('_route') == 'security_logout' %}active{% endif %}">
-                        <a class="nav-link" href="{{ path('security_logout') }}">Logout</a>
-                    </li>
+                        {% include 'common/partials/auth-navigation.html.twig' %}
                 {% else %}
-                    <li class="nav-item {% if app.request.attributes.get('_route') == 'security_login' %}active{% endif %}">
-                        <a class="nav-link" href="{{ path('security_login') }}">Login</a>
-                    </li>
-                    <li class="nav-item {% if app.request.attributes.get('_route') == 'user_register' %}active{% endif %}">
-                        <a class="nav-link" href="{{ path('user_register') }}">Register</a>
-                    </li>
+                    {% include 'common/partials/anon-navigation.html.twig' %}
                 {% endif %}
             </ul>
         </div>
