--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -1,9 +1,6 @@
 #footer {
-  @include media-breakpoint-up(lg) {
-    //position: absolute;
-    //bottom: 0;
-    //width: 100%;
-  }
+  height: 60px;
+
   padding: 10px;
   .git-hub-link {
     > img {
