--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
+@import "reset";
+
 @import "_helpers/variables";
 @import "_helpers/fonts";
 @import "_helpers/helpers";
@@ -21,9 +23,9 @@
 
 html,
 body {
-  margin:0;
-  padding:0;
-  height:100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
   color: #fff;
   font-family: $font-family-base;
 }
@@ -38,5 +40,15 @@ body {
   min-height: 100vh;
   position: relative;
   background: rgba(0, 0, 0, 0.2);
+}
+
+#main {
+  min-height: 100%;
+  margin-bottom: -60px;
+  &:after {
+    content: "";
+    display: block;
+    height: 60px;
+  }
 }
 
