--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -4,7 +4,18 @@
     //bottom: 0;
     //width: 100%;
   }
-  padding: 10px;
+  //position: absolute;
+  //width: 100%;
+  //bottom: 0;
+  //padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  height: 50px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  > .container {
+    padding: 5px 15px;
+  }
   .git-hub-link {
     > img {
       transition: all 0.2s ease-in-out;
