--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,9 +21,10 @@
 
 html,
 body {
-  margin:0;
-  padding:0;
-  height:100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100%;
   color: #fff;
   font-family: $font-family-base;
 }
@@ -32,11 +33,14 @@ body {
   background: url('images/background.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
+  // Temp
+  background-size: cover;
 }
 
 #main-wrapper {
   min-height: 100vh;
   position: relative;
   background: rgba(0, 0, 0, 0.2);
+  padding-bottom: 50px;
 }
 
