loading images from cloudinary

--- a/app/Resources/views/teacher/details.html.twig
+++ b/app/Resources/views/teacher/details.html.twig
@@ -15,7 +15,7 @@
                         <th>Actions</th>
                     </tr>
                     <tr>
-                        <td><img src="{{ asset('uploads/images/' ~ student.image) }}" alt=""></td>
+                        <td><img src="{{ student.image|cloudinary_url({"width" : 150, "height" : 150, "radius" : 50, "secure" : true}) }}" alt=""></td>
                         <td>{{ student.firstName }}</td>
                         <td>{{ student.lastName }}</td>
                         <td>{{ student.email }}</td>
