--- a/app/Resources/views/teacher/partials/unconfirmed-students.html.twig
+++ b/app/Resources/views/teacher/partials/unconfirmed-students.html.twig
@@ -14,7 +14,7 @@
                 </tr>
                 {% for student in uncofirmedStudents %}
                     <tr>
-                        <td><img src="{{ asset('uploads/images/' ~ student.image) }}" alt=""></td>
+                        <td><img src="{{ student.image|cloudinary_url({"width" : 150, "height" : 150, "radius" : 50, "secure" : true}) }}" alt=""></td>
                         <td>{{ student.firstName }}</td>
                         <td>{{ student.lastName }}</td>
                         <td>{{ student.email }}</td>
